<resources>
    <string name="app_name">EditorBase</string>
    <!-- 美颜相关  start -->
    <string name="alivc_beauty">Face Filter</string>
    <string name="alivc_fine_tune">Makeup</string>
    <string name="beauty_whitening">Skin Whitening</string>
    <string name="beauty_buffing">Skin Polishing</string>
    <string name="beauty_blush">Skin Shining</string>
    <string name="beauty_lip_gloss">Blusher</string>
    <string name="beauty_short_jaw">Shorten Jaw</string>
    <string name="beauty_bigeye">BigEye</string>
    <string name="beauty_thinface">SlimFace</string>
    <string name="alivc_beauty_level_advanced">Advanced</string>
    <string name="alivc_beauty_level_normal">Normal</string>
    <!-- 美颜相关  end   -->
    <string name="alivc_tips_fine_tuning">点击可微调</string>
    <string name="solution_apsarav">ApsaraV</string>
    <string name="solution_push">Publish</string>
    <string name="solution_live_room">Live Room</string>
    <string name="solution_player">Player</string>
    <string name="solution_svideo">Svideo</string>
    <string name="solution_upload">Upload</string>
    <string name="solution_recorder">Recorder</string>
    <string name="solution_camera">Camera</string>
    <string name="solution_crop">Crop</string>
    <string name="solution_edit">Edit</string>
    <string name="solution_community">community</string>
    <string name="solution_videocall">Video Call</string>
    <string name="solution_audiocall">Audio Call</string>
    <string name="solution_home_welcome_hint">WELCOME TO START THE \nVIDEO JOURNEY</string>
    <string name="solution_wait_remind">Product features are under development...</string>
    <string name="solution_unable_merge_remind">Unable Merge Desx</string>
    <string name="resetstr">Switch Success, reloading data...</string>
    <string name="alivc_apsara_video_regist">© 2009&#8211;2018 Copyright by Alibaba Cloud All rights reserved</string>
    <string name="alivc_apsara_video_title">Aparsara Video</string>
    <string name="alivc_load_fail">加载失败</string>
    <string name="aliyun_download_failed">下载失败</string>
    <string name="aliyun_network_not_connect">网络没有连接，请检查网络</string>
    <string name="aliyun_no_free_memory">剩余磁盘空间不足</string>
    <string name="aliyun_empty_music">无音乐</string>
    <string name="aliyun_select_music">选择音乐</string>
    <string name="aliyun_online_music">在线音乐</string>
    <string name="aliyun_local_music">本地音乐</string>
    <string name="alivc_music_copyright">由虾米音乐提供服务</string>
    <string name="aliyun_complete">完成</string>
    <string name="aliyun_action_settings">Settings</string>
    <string name="aliyun_res_copy">资源拷贝中</string>
    <string name="aliyun_compose">合成中</string>
    <string name="aliyun_permission_camera_mic">请求相机和麦克风权限</string>
    <string name="aliyun_filter_null">原片</string>
    <string name="aliyun_video_save_tip">当前拍摄的视频已保存相册</string>
    <string name="aliyun_min_record_duration">最小时长</string>
    <string name="aliyun_max_record_duration">最大时长</string>
    <string name="aliyun_bit_rate">码率(kbps)</string>
    <string name="aliyun_frame_rate">帧率</string>
    <string name="aliyun_video_quality">视频质量</string>
    <string name="aliyun_gop">关键帧间隔</string>
    <string name="aliyun_bitrate">码率</string>
    <string name="aliyun_resolution">分辨率</string>
    <string name="aliyun_ratio">视频比例</string>
    <string name="aliyun_min_record_duration_hint">最小时长大于0，默认值2S</string>
    <string name="aliyun_max_record_duration_hint">不超过300S，默认值15S</string>
    <string name="aliyun_bit_rate_hint">建议600-2000，默认1000</string>
    <string name="aliyun_frame_rate_hint">建议20-30，默认30</string>
    <string name="aliyun_gop_hint">建议1-300，默认250 </string>
    <string name="aliyun_bitrate_hint">默认为0，根据视频质量参数计算</string>
    <string name="aliyun_start_record">启动录制界面</string>
    <string name="alivc_record_setting">录制设置</string>
    <string name="aliyun_record_resolution_360p">360p</string>
    <string name="aliyun_record_resolution_480p">480p</string>
    <string name="aliyun_record_resolution_540p">540p</string>
    <string name="aliyun_record_resolution_720p">720p</string>
    <string name="aliyun_record_ratio_1_1">1:1</string>
    <string name="aliyun_reocrd_ratio_9_16">9:16</string>
    <string name="aliyun_record_ratio_3_4">3:4</string>
    <string name="aliyun_video_quality_low">较差</string>
    <string name="aliyun_video_quality_meidan">一般</string>
    <string name="aliyun_video_quality_high">良好</string>
    <string name="aliyun_video_quality_super">优质</string>
    <string name="aliyun_camera_permission_tip">请开启摄像头权限</string>
    <string name="aliyun_no_import_moudle">当前不包含导入模块</string>
    <string name="aliyun_rate_very_slow">极慢</string>
    <string name="aliyun_rate_slow">慢</string>
    <string name="aliyun_rate_standard">标准</string>
    <string name="aliyun_rate_fast">快</string>
    <string name="aliyun_rate_very_fast">极快</string>
    <string name="aliyun_delete">回删</string>
    <string name="aliyun_video_codec">视频编码方式</string>
    <string name="aliyun_hardware_encoder">硬编</string>
    <string name="aliyun_openh264_encoder">OpenH264软编</string>
    <string name="aliyun_ffmpeg_encoder">FFmpeg软编</string>
    <string name="aliyun_recoder_duration_error">最小时长不能大于最大时长, 请重新设置!!!</string>
    <string name="aliyun_beauty_face">美颜</string>
    <string name="aliyun_gif">动图</string>
    <string name="alivc_not_allow_change_mv">录制过程中, 不能更改MV效果</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alivc_filter_none">原图</string>
    <string name="alivc_record_click">单击拍</string>
    <string name="alivc_record_long_press">长按拍</string>
    <string name="alivc_record_press">按住拍</string>
    <string name="alivc_record_clear">清空</string>
    <string name="alivc_onekey_open">一键开启</string>
    <string name="alivc_permission_title">请开启以下权限</string>
    <string name="alivc_phone_state_calling">通话中, 录制时静音</string>
    <string name="no_camera_permission">没有权限使用摄像头，请开启摄像头权限</string>
    <string name="no_record_bluetooth_permission">没有权限使用蓝牙，请开启蓝牙权限</string>
    <string name="no_record_audio_permission">没有权限使用录音，请开启录音权限</string>
    <string name="no_read_phone_state_permission">没有读取用户数据的权限，请开启该权限</string>
    <string name="no_write_external_storage_permission">没有文件写权限，请开启该权限</string>
    <string name="no_read_external_storage_permission">没有文件读权限，请开启该权限</string>

    <string name="sdcard_not_ready">SDCARD 没有准备好</string>
    <string name="gallery_all_media">相机胶卷</string>
    <string name="video_duration">%1$02d:%2$02d:%3$02d</string>
    <string name="aliyun_video_crop_error">视频格式不支持</string>
    <string name="aliyun_not_supported_audio">音频格式不支持</string>
    <string name="aliyun_video_error">视频错误</string>
    <string name="alivc_tip_crop_gif">暂时不支持gif文件裁剪</string>
    <string name="wait">请稍候</string>
    <string name="please_select_video">请选择视频</string>
    <string name="message_max_duration_import">视频总时长不能超过5分钟，请裁剪后继续!</string>

    <string name="video_cancel">取消</string>
    <string name="video_give_up">放弃</string>
    <string name="video_ok">确定</string>
    <string name="video_select">选择视频</string>
    <string name="video_filter_face">滤镜</string>
    <string name="video_beauty_face">美颜</string>
    <string name="video_record_exit_tip">是否放弃当前拍摄</string>
    <string name="video_record_give_up">放弃拍摄</string>
    <string name="aliyun_svideo_editor_init_failed">编辑器初始化失败</string>
    <string name="alivc_svideo_play_film">play</string>
    <string name="alivc_svideo_pause_film">pause</string>
    <string name="play_video_error">该视频为错误视频</string>
    <string name="not_supported_audio">不支持的音频格式</string>
    <string name="not_supported_video">不支持的视频格式</string>
    <string name="not_supported_pixel_format">不支持的文件</string>
    <string name="res_copy">资源拷贝中</string>
    <string name="video_finish">完成</string>
    <string name="video_publish_video">发布视频</string>
    <string name="video_edit_tip">这一刻的想法(20字以内)</string>
    <string name="video_delete">删除</string>
    <string name="video_add_good">添加商品</string>
    <string name="video_publish">发布</string>
</resources>
