<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/b2"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:orientation="vertical">

    <View
        android:id="@+id/v_status_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/b1" />

    <!--标题区-->
    <RelativeLayout
        android:id="@+id/titlebar"
        style="@style/TitleBarBgColorStylet">

        <TextView
            android:id="@+id/btn_back"
            style="@style/TitleBarBackWithOutTxtStyle" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TitleBarTitleTextStyle"
            android:text="@string/video_publish_video" />

        <TextView
            android:id="@+id/tv_publish"
            style="@style/TitleBarRightStyle"
            android:text="@string/video_publish" />
    </RelativeLayout>

    <!--商品描述编辑区-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_input"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:gravity="top"
            android:hint="@string/video_edit_tip"
            android:inputType="textMultiLine"
            android:maxLength="20"
            android:singleLine="true"
            android:textColorHint="#A5A4A4"
            android:textSize="15sp" />
    </LinearLayout>

    <!--视频缩略图-->
    <RelativeLayout
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@color/white">

        <com.maiguoer.widget.ShapedImageView
            android:id="@+id/iv_video_thumb"
            app:round_radius="5dp"
            app:shape_mode="round_rect"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@mipmap/publish_video_play" />
    </RelativeLayout>

    <!--标签-->
    <TextView
        android:id="@+id/tv_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/video_publish_tag_bg"
        android:paddingBottom="8dp"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:paddingTop="8dp"
        android:text="#Tag#"
        android:textColor="@color/T5"
        android:textSize="12sp" />

    <!--商品区域-->
    <RelativeLayout
        android:id="@+id/rl_good_layout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:background="#F7F7F7"
        android:orientation="horizontal"
        android:visibility="gone">
        <!--商品图片-->
        <ImageView
            android:id="@+id/iv_good_img"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@mipmap/video_filter_face" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/iv_good_img"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <!--商品名字-->
            <TextView
                android:id="@+id/tv_good_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="goodName"
                android:textColor="@color/T4"
                android:textSize="15sp" />
            <!--商品价格-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="¥"
                    android:textColor="@color/b9"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_good_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="¥"
                    android:textColor="@color/b9"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <!--删除-->
        <ImageView
            android:id="@+id/iv_img_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:src="@mipmap/video_publish_good_del" />
        <!--确认删除-->
        <TextView
            android:id="@+id/tv_comfirm_del"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="@string/video_delete"
            android:textColor="@color/T12"
            android:textSize="15sp"
            android:visibility="gone" />
    </RelativeLayout>

    <!--添加商品-->
    <LinearLayout
        android:id="@+id/ll_insert_good"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:background="#F7F7F7"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/add_goods_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/video_add_good"
            android:textColor="#A5A4A4"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>